fixes front page table overflow bug

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -32,6 +32,6 @@ nav {
   padding: 20px;
   margin-bottom: 20px;
   float: left;
-  width: 100%;
+  min-width: 100%;
   background: white;
 }
